<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="30dp"
            >

            <ImageView
                android:id="@+id/movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/content_description_backdrop"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardUseCompatPadding="true"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    >

                    <ImageView
                        android:id="@+id/movie_poster"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/poster_description"
                        />

                    <LinearLayout
                        android:id="@+id/facts_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/movie_poster"
                        android:layout_alignParentTop="true"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/header_facts"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            />

                        <LinearLayout
                            android:id="@+id/details_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_calendar_24dp"
                                android:contentDescription="@string/calendar_image" />

                            <TextView
                                android:id="@+id/movie_release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:src="@drawable/ic_star_24dp"
                                android:contentDescription="@string/star_image" />

                            <TextView
                                android:id="@+id/movie_vote_average"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/original_title"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            />

                        <TextView
                            android:id="@+id/movie_original_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/original_language"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            />

                        <TextView
                            android:id="@+id/movie_original_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/movie_poster"
                        android:layout_marginTop="20dp"
                        android:ellipsize="end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_favorite_border_white_24dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>